# Submarine-2018-TBN-

ros/src/simulated/: CMakeLists.txt  package.xml
ros/src/simulated/scripts/: motor_controller.py  motor_controller.py~
