<?xml version="1.0"?>
<package format="2">
  <name>simulated</name>
  <version>0.0.0</version>
  <description>The gui package</description>
  <maintainer email="asinha@todo.todo">asinha</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <exec_depend>rospy</exec_depend>

</package>
